# OmniVault

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MCP.md  README.md  USAGE_GUIDE.md  VISION.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_request.md
src/: __init__.py  abogus.py  activation.py  anti_detect.py  app.py  batch_add.py  batch_processor.py  comment_scraper.py  config.py  cookie_manager.py  creator_scraper.py  embedding.py  extractor.py  feed_scraper.py  feishu_bot.py  knowledge_store.py  login.py  main.py  mcp_server.py  notify.py  signer.py  summarizer.py  task_queue.py  video_processor.py  vision.py  webhooks.py  worker.py  writer.py
src/llm_wiki/: __init__.py  compiler.py  indexer.py  linter.py  query.py  routes.py  schema.py
src/platform/: __init__.py  base.py  bilibili.py  detector.py  facebook.py  instagram.py  tiktok.py  weibo.py  weixin.py  x_twitter.py  xiaohongshu.py  youtube.py
src/templates/: activate.html  base.html  dashboard_random.html  dashboard_recent.html  dashboard_stats.html  dashboard_tags.html  dashboard_worker.html  detail.html  home.html  index.html  jobs.html  jobs_partial.html  logs.html  logs_partial.html  search.html  settings.html  setup.html  submit.html  submit_result.html  wiki.html  wiki_lint.html  wiki_lint_partial.html  wiki_query.html  wiki_query_result.html
src/visual/: SKILL.md  __init__.py  action.py  agent.py  screen.py  som.py  vision.py
