[project]
name = "douyin-kb"
version = "2.0.0"
description = "抖音知识库 — 下载视频 → Whisper转写 → AI三段式总结 → SQLite+FTS5知识库"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "httpx>=0.28",
    "lark-oapi>=1.4",
    "faster-whisper>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "playwright>=1.44",
    "PyExecJS>=1.3",
    "gmssl>=3.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
